[tool.poetry]
name = "jsun"
version = "1.0a1"
description = "JSON encoding & decoding with extra features"
authors = ["Wyatt Baldwin <self@wyattbaldwin.com>"]
license = "MIT"
repository = "https://github.com/wylee/jsun"
readme = "README.md"
keywords = ["json"]

packages = [
    { include = "jsun", from = "src" },
]

include = [
    "docs/*",
    "CHANGELOG.md",
    "LICENSE",
    "README.md",
]

[tool.poetry.dependencies]
python = "^3.7"
arrow = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "*"
"com.wyattbaldwin.make-release" = "*"
coverage = "*"
flake8 = "*"
runcommands = "*"
sphinx = "*"
tox = "*"

[tool.poetry.scripts]
jsun = "jsun.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
